# wanna-ml

./: .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dev  LICENCE  README.md  changelog-ci-config.yaml  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml  wanna.yaml
.github/: github-actions-demo.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: SlackRelease.yml  build.yml  deploy_new_version.yml  main.yml  main2.yml  pull_request_title_linter.yaml  release.yml  test.yml  windows.yml
ci-builder/: Dockerfile
ci-builder/config/: .condarc
cli/commands/: index.html
configuration/: index.html
development/: index.html
docker/: Dockerfile  run_jupyter.sh
docs/: configuration.md  development.md  index.md  installation.md  sdk.md  troubleshooting.md
docs/cli/: api.md  commands.md  index.md
docs/cli/commands/: notebook.md
docs/reference/: job.md  managed-notebook.md  project.md  tensorboard.md
docs/tutorial/: components.md  docker.md  index.md  init.md  job.md  managed-notebook.md  notebook.md  pipeline.md  profile.md  profiles.md  project.md  tensorboard.md
examples/simple/: job.Dockerfile  wanna.yaml
installation/: index.html
samples/: mount_bucket.sh  scripts.py  wanna.yaml
samples/custom_job/: profiles.yaml  wanna.yaml
samples/custom_job/custom_job_src/: README.md  setup.py
samples/custom_job/custom_job_src/trainer/: task.py
samples/docker/: pii-research-requirements.txt
samples/hp_tuning/: Dockerfile  params.yaml  wanna.yaml
samples/hp_tuning/trainer/: task.py
samples/notebook/: Dockerfile  notebook.yaml  requirements.txt  wanna.yaml
samples/notebook/custom-container/: Dockerfile.notebook  profiles.yaml  wanna.yaml
samples/notebook/custom_container/: profiles.yaml  wanna.yaml
samples/notebook/includes/: extra.yaml
samples/notebook/julia/: Dockerfile.notebook  dockerbuild.yaml  init.sh  wanna.yaml
samples/notebook/managed-notebook/: wanna.yaml
samples/notebook/simple-pip/: requirements.txt  wanna.yaml
samples/notebook/simple_pip/: wanna.yaml
samples/notebook/vm_image/: wanna.yaml
samples/notebook/workbench_instance_custom_container/: Dockerfile.notebook  profiles.yaml  wanna.yaml
samples/notebook/workbench_instance_vm_image/: wanna.yaml
samples/pipelines/bigquery_simple/: wanna.yaml
samples/pipelines/bigquery_simple/bigquery_simple/: config.py  pipeline.py
samples/pipelines/bigquery_simple/pipeline/: config.py  pipeline.py
samples/pipelines/dataproc_simple/: wanna.yaml
samples/pipelines/dataproc_simple/dataproc_simple/: config.py  pipeline.py
samples/pipelines/dataproc_simple/docker/: Dockerfile  pi.py
samples/pipelines/dataproc_simple/pipeline/: config.py  pipeline.py
samples/pipelines/distributed-tf/: Dockerfile.train  params.yaml  pipeline.py  wanna.yaml
samples/pipelines/distributed-tf/trainer/: cifar10_train.py  task.py
samples/pipelines/pytorch/: Dockerfile  deploy-pipeline.sh  setup.py  wanna.yaml
samples/pipelines/sklearn/: Dockerfile.serve  Dockerfile.train  experiment-1.yaml  params.eval.yaml  params.test.yaml  params.yaml  pipeline.py  wanna.yaml
search/: search_index.json
src/wanna/cli/: __init__.py  __main__.py  version.py
src/wanna/components/: loader.py  template.py
src/wanna/data/: dataset.py
templates/blank/: .gitignore  README.md  cookiecutter.json
templates/blank/{{cookiecutter.project_slug}}/: .gitignore  README.md  mkdocs.yaml  pyproject.toml  wanna.yaml
templates/sklearn/: README.md  cookiecutter.json
templates/sklearn/{{cookiecutter.project_slug}}/: .dockerignore  README.md  pyproject.toml  wanna.yaml
templates/sklearn/{{cookiecutter.project_slug}}/notebook/train/: requirements.txt
templates/sklearn/{{cookiecutter.project_slug}}/pipeline/: config.py  pipeline.py
templates/sklearn/{{cookiecutter.project_slug}}/pipeline/components/predictor/: make_prediction_request.py
templates/sklearn/{{cookiecutter.project_slug}}/pipeline/components/trainer/: eval_model.py  train_xgb_model.py
testing/templates/blank/project-name/: .pre-commit-config.yaml  README.md  mkdocs.yaml  pyproject.toml  wanna.yaml
testing/templates/blank/project-name/docs/: index.md
testing/templates/blank/project-name/pipeline/: config.py
testing/templates/sklearn/project-name/: README.md  pyproject.toml  wanna.yaml
testing/templates/sklearn/project-name/pipeline/: config.py  pipeline.py
testing/templates/sklearn/project-name/pipeline/components/data/: get_data.py
testing/templates/sklearn/project-name/pipeline/components/predictor/: make_prediction_request.py
tests/: conftest.py  test_hello.py
tests/base/: test_models.py
tests/cli/: test_base.py  test_job_plugin.py  test_notebook_plugin.py  test_pipeline_plugin.py
tests/components/: test_comp.yaml  test_components_service.py  test_wanna_component_loader.py
tests/custom_jobs/: test_job_models.py  test_job_paths.py  test_job_service.py
tests/deployment/: test_gcp_connector.py  test_monitoring.py
tests/docker/: test_models.py
tests/gcp_settings/: gcp_settings.py  test_gcp_profile.py
tests/init_templates/: test_init_templates.py
tests/mocks/: mocks.py
tests/notebook/: test_managed_notebook_service.py  test_models.py  test_notebook_service.py  test_service.py  test_workbench_instance_service.py
tests/pipeline/: test_pipeline_models.py  test_pipeline_paths.py  test_pipeline_service.py
tests/plugins/: test_job_plugin.py  test_managed_notebook_plugin.py  test_notebook_plugin.py
tests/services/: test_base_service.py  test_docker_service.py
tests/tensorboard/: test_service.py
tests/utils/: test_env.py  test_validators.py
tests/wanna_config/: test_models.py
troubleshooting/: index.html
tutorial/: index.html
tutorial/docker/: index.html
tutorial/job/: index.html
tutorial/managed-notebook/: index.html
tutorial/notebook/: index.html
tutorial/pipeline/: index.html
tutorial/profile/: index.html
tutorial/project/: index.html
tutorial/tensorboard/: index.html
(+169 files in other folders)
