[tool.poetry]
authors = ["Joao Da Silva <joao.silva1@avast.com>", "Michal Mrazek <michal.mrazek@avast.com>"]
description = "CLI tool for managing ML projects on Vertex AI"
name = "wanna-ml"
version = "0.0.0"
packages = [
    { include = "wanna", from = "src" },
]
include = ["CHANGELOG.md"]
readme = "README.md"
license = "MIT"
keywords = ["mlops", "vertex-ai", "GCP", "google-cloud-platform", "machine-learning"]
homepage = "https://avast.github.io/wanna-ml"
documentation = "https://avast.github.io/wanna-ml"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[tool.poetry.extras]
test = ["pytest"]

[tool.poetry.dependencies]
case-converter = "^1.1.0"
cookiecutter = "^2.4.0"
cron-validator = "^1.0.8"
dirhash = "^0.2.1"
email-validator = "^2.1.0"
emoji = "^2.8.0"
gitpython = "^3.1.40"
google-api-core = "^2.12.0"
google-cloud-aiplatform = "^1.35.0"
google-cloud-build = "^3.20.1"
google-cloud-compute = "^1.14.1"
google-cloud-functions = "^1.13.3"
google-cloud-logging = "^3.8.0"
google-cloud-monitoring = "^2.16.0"
google-cloud-notebooks = "^1.8.1"
google-cloud-pipeline-components = "^2.5.0"
google-cloud-resource-manager = "^1.10.4"
google-cloud-scheduler = "^2.11.2"
google-cloud-storage = "^2.12.0"
gcloud-config-helper = "^0.3.1"
halo = "^0.0.31"
Jinja2 = "^3.1.2"
kfp = "^2.3.0"
pathvalidate = "^3.2.0"
pydantic = "^1.10.5"
python = ">=3.8.1,<3.11"
python-on-whales = "^0.65.0"
pyyaml-include = "^1.3.1"
PyYAML = "^6.0.1"
smart-open = {extras = ["gcs"], version = "^6.4.0"}
treelib = "^1.7.0"
typer = "0.9.0"
waiting = "^1.4.1"
rich = "^13.6.0"
scandir = [
    {version = "^1.10.0", platform="win32" }
]
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mkdocs-click = "^0.8.1"
mkdocs-material = "^9.4.6"
mkdocs-typer = "^0.0.3"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"
mkautodoc = "^0.2.0"
markdown = "^3.5"
mock = "^5.1.0"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
pylint = "^3.0.2"
pylint-pydantic = "^0.3.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
taskipy = "^1.12.0"
types-mock = "^5.1.0.2"
types-pyyaml = "^6.0.12"
types-requests = "^2.31.0"
types-setuptools = "^68.2.0"
scikit-learn = "^1.2.1"
xgboost = "^1.7.4"

[tool.mypy]
exclude = "src/wanna/components/templates"
follow_imports = "silent"
strict = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
implicit_reexport = true
ignore_missing_imports = true

[tool.'mypy-google.*']
ignore_missing_imports = true

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.poetry.scripts]
wanna = "wanna.cli.__main__:wanna"

[tool.pytest.ini_options]
addopts = "--verbose -s --cov-report term --cov-report xml:coverage.xml --cov=src --durations=0 --ignore=src/wanna/components/templates"
filterwarnings = [
    "error",
    "ignore::UserWarning", # note the use of single quote below to denote "raw" strings in TOML
    'ignore::DeprecationWarning',
    'ignore::SyntaxWarning',
    'ignore::ResourceWarning',
]

[tool.taskipy.tasks]
docs-deploy = "mkdocs gh-deploy --force"
docs-serve = "mkdocs serve"
build = "pre-commit run --all-files"
pre_build = "pre-commit install"
mypy = "mypy ./src"
lint = "pylint ./src"

[tool.black]
extend-ignore = "E203"
max-line-length = 120

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
