[tool.poetry]
authors = ["Joao Da Silva <joao.dasilvacunha@gendigital.com>"]
description = "CLI tool for managing ML projects on Vertex AI"
name = "wanna-ml"
version = "0.0.0"
packages = [
    { include = "wanna", from = "src" },
]
include = ["CHANGELOG.md"]
readme = "README.md"
license = "MIT"
keywords = ["mlops", "vertex-ai", "GCP", "google-cloud-platform", "machine-learning"]
homepage = "https://avast.github.io/wanna-ml"
documentation = "https://avast.github.io/wanna-ml"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10.0"
kfp = "^2.7.0"
google-cloud-aiplatform = "^1.56.0"
google-cloud-build = "^3.24.0"
google-cloud-compute = "^1.19.0"
google-cloud-functions = "^1.16.3"
google-cloud-logging = "^3.10.0"
google-cloud-monitoring = "^2.21.0"
google-cloud-notebooks = "^1.10.3"
google-cloud-scheduler = "^2.13.3"
google-cloud-storage = "^2.17.0"
gcloud-config-helper = "^0.3.1"
case-converter = "^1.1.0"
cookiecutter = "^2.6.0"
cron-validator = "^1.0.8"
dirhash = "^0.5.0"
email-validator = "^2.2.0"
emoji = "^2.12.1"
gitpython = "^3.1.43"
halo = "^0.0.31"
Jinja2 = "^3.1.4"
pathvalidate = "^3.2.0"
pydantic = "^2.10.6"
python-on-whales = "^0.71.0"
pyyaml-include = "^1.3.2"
PyYAML = "^6.0.1"
smart-open = {extras = ["gcs"], version = "^7.0.4"}
treelib = "^1.7.0"
typer = "0.12.5"
waiting = "^1.4.1"
rich = "^13.7.1"
pendulum = "^3.0.0"
igittigitt = "^2.1.4"

[tool.poetry.group.samples.dependencies]
google-cloud-pipeline-components = "^2.8.0"
xgboost = "^2.0.3"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
mkdocs-click = "^0.8.1"
mkdocs-material = "^9.4.6"
mkdocs-typer = "^0.0.3"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"
mkautodoc = "^0.2.0"
markdown = "^3.5"
mock = "^5.1.0"
mypy = "^1.8.0"
pytest = "^8.0.1"
pytest-cov = "^5.0.0"
pytest-ruff = "^0.3.1"
pytest-mypy = "^0.10.3"
pytest-mock = "^3.12.0"
poethepoet = "^0.22.0"
types-mock = "^5.1.0.3"
types-pyyaml = "^6.0.12"
types-requests = "^2.31.0"
types-setuptools = "^68.2.0"
pre-commit = "^2.19.0"
pytest-env = "^1.1.5"

[tool.pytest.ini_options]
addopts = """
    --verbose
    --ruff
    --ruff-format
    --cov-report term
    --cov-report xml:coverage.xml
    --cov=src
    --mypy
    --durations=0
    --ignore=templates
    --ignore=samples
    --ignore=dev_tests
    """
#addopts = """
#    --ignore=templates
#    --ignore=samples
#    --ignore=dev_tests
#    -s
#    """
filterwarnings = [
    "error",
    "ignore::UserWarning", # note the use of single quote below to denote "raw" strings in TOML
    'ignore::DeprecationWarning',
    'ignore::SyntaxWarning',
    'ignore::ResourceWarning',
]
env = [
    "LABEL = test"
]

[tool.poe.tasks]
# Separate import sorting until https://github.com/astral-sh/ruff/issues/8232 is merged
_ruff_sort_imports = "ruff check --select I --fix ."
_ruff_format = "ruff format ."
format-code = ["_ruff_sort_imports", "_ruff_format"]
docs-deploy = "mkdocs gh-deploy --force"
docs-serve = "mkdocs serve"

[tool.ruff]
line-length = 99
output-format = "full"
extend-exclude = [
    "**pb2.py",
    "**pb2.pyi",
    "samples/**",
    "templates/blank/**",
    "templates/sklearn/**",
    "dev_tests/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "PERF", "ARG"]
ignore = [
    "E1", # handled by formatter
    "E4", # handled by formatter
    "E5", # handled by formatter
    "E722",
    "PERF401"
]

[tool.mypy]
exclude = [
    "samples/pipelines/*",
    "dev_tests/*",
]
follow_imports = "silent"
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true
strict = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
implicit_reexport = true
ignore_missing_imports = true

[tool.poetry.scripts]
wanna = "wanna.cli.__main__:wanna"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
