[tool.poetry]
authors = ["project owner", "you@avast.com"]
description = "Link to MLOps project page"
name = "project-name"
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.8.4"
isort = "^5.10.1"
pylint = "^2.13.8"
pytest = "^7.1.2"
taskipy = "^1.10.2"
google-cloud-pipeline-components= "^1.0.5"
kfp = "^1.8.12"
wanna-ml = "^0.1.5"
pandas = "^1.4.2"
pre-commit = "^2.10.1"
mkdocs="1.3.0"
mkdocs-click = "^0.7.0"
mkdocs-graphviz = "^1.4.4"
mkdocs-material = "^8.2.15"
mkdocs-typer = "^0.0.2"
mkdocstrings = "^0.18.1"
mypy = "^0.950"

[tool.taskipy.tasks]
docs-deploy = "mkdocs gh-deploy"
docs-serve = "mkdocs serve"
build = "pre-commit run --all-files"
pre_build = "pre-commit install"
black = "black pipeline"
check = "task isort && task black && task pylint"
isort = "isort pipeline"
pylint = "pylint pipeline"

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore::UserWarning", # note the use of single quote below to denote "raw" strings in TOML
  'ignore::DeprecationWarning',
]

[tool.pylint.master]
good-names = "logger,e,i,j,n,m,f,_,xs,ys,df"
signature-mutators="""
  click.decorators.option,
  click.decorators.argument,
  click.decorators.version_option,
  click.decorators.help_option,
  click.decorators.pass_context,
  click.decorators.confirmation_option"""

[tool.pylint.messages_control]
disable = "all"
enable = """,
    unused-import,
    fixme,
    useless-object-inheritance,
    unused-variable,
    unused-argument,
    unexpected-keyword-arg,
    string,
    unreachable,
    invalid-name,
    logging-format-interpolation,
    logging-fstring-interpolation,
    unnecesary-pass,
    """
ignored-argument-names = "_.*|^ignored_|^unused_|args|kwargs"

[black]
extend-ignore = "E203"
max-line-length = 120

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
