[tool.poetry]
authors = ["project owner", "you@avast.com"]
description = "Link to MLOps project page"
name = "project-name"
packages = [
  {include = "project-name", from = "pipeline"},
]
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
google-cloud-pipeline-components= "^1.0.5"
kfp = "^1.8.12"
wanna-ml = "0.1.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.13.8"
pytest = "^7.1.2"
taskipy = "^1.10.1"

[tool.taskipy.tasks]
black = "black pipeline"
check = "task isort && task black && task pylint"
isort = "isort pipeline"
pylint = "pylint pipeline"

[tool.pytest.ini_options]
addopts = "--verbose --pylint --pylint-rcfile=pyproject.toml --cov=project-name --cov-report html --mypy"
filterwarnings = [
  "error",
  "ignore::UserWarning", # note the use of single quote below to denote "raw" strings in TOML
  'ignore::DeprecationWarning',
]

[tool.pylint.master]
good-names = "logger,e,i,j,n,m,f,_,xs,ys,df"
ignore = "sphinx"

[tool.pylint.messages_control]
disable = "all"
enable = """,
    unused-import,
    fixme,
    useless-object-inheritance,
    unused-variable,
    unused-argument,
    unexpected-keyword-arg,
    string,
    unreachable,
    invalid-name,
    logging-format-interpolation,
    logging-fstring-interpolation,
    unnecesary-pass,
    """
ignored-argument-names = "_.*|^ignored_|^unused_|args|kwargs"

[black]
extend-ignore = "E203"
max-line-length = 120

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
